discussion/jgit/194019/194019_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Fix DefaultCharset bug pattern flagged by error prone

See more details in: [1].

[1] https://errorprone.info/bugpattern/DefaultCharset
Change-Id: I3de0be57a2d74490a5b4e66801e9767b38f13bf9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: David Ostrovsky
Date: 2022-06-08 05:22:57.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2022-06-08 05:23:03.000000000
Message: 
Patch Set 1:

Build Started https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline.java11/1372/
----------------------------------------------------------------------------------------------------------------------
Author: Andrey Loskutov
Date: 2022-06-08 05:28:15.000000000
Message: 
Patch Set 1: Code-Review-1

(2 comments)
File Comment: /PATCHSET_LEVEL -> The code in question reads *system specific* input from processes and writes it back to the system output. Conversion here would break that.

I believe adding suppression annotations is the right solution here. 
Line:248, org.eclipse.jgit.pgm/src/org/eclipse/jgit/pgm/DiffTool.java -> I might be wrong, but this change would break system encoded output converting it to utf8.

----------------------------------------------------------------------------------------------------------------------
Author: JGit Bot
Date: 2022-06-08 05:35:30.000000000
Message: 
Patch Set 1: Verified+1

Build Successful 

https://ci.eclipse.org/jgit/job/stable/job/jgit.gerrit-pipeline.java11/1372/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Thomas Wolf
Date: 2022-06-08 07:16:37.000000000
Message: 
Patch Set 1:

(1 comment)
Line:248, org.eclipse.jgit.pgm/src/org/eclipse/jgit/pgm/DiffTool.java -> Alternatively use SystemReader.getInstance().getDefaultCharset().

----------------------------------------------------------------------------------------------------------------------
Author: David Ostrovsky
Date: 2022-06-08 07:36:33.000000000
Message: 
Patch Set 1:

(1 comment)
Line:248, org.eclipse.jgit.pgm/src/org/eclipse/jgit/pgm/DiffTool.java -> Yes, this is also what error prone suggesting:

```
  Did you mean 'outw.println(new String(result.getStdout().toByteArray(), UTF_8));' or 'outw.println(new String(result.getStdout().toByteArray(), Charset.defaultCharset()));'?
org.eclipse.jgit.pgm/src/org/eclipse/jgit/pgm/MergeTool.java:290: error: [DefaultCharset] Implicit use of the platform default charset, which can result in differing behaviour between JVM executions or incorrect behavior if the encoding of the data source doesn't match expectations.
					errw.println(new String(result.getStderr().toByteArray()));
					             ^
    (see https://errorprone.info/bugpattern/DefaultCharset)
  Did you mean 'errw.println(new String(result.getStderr().toByteArray(), UTF_8));' or 'errw.println(new String(result.getStderr().toByteArray(), Charset.defaultCharset()));'?
Target //:all failed to build
Use --verbose_failures to see the command lines of failed build steps.
INFO: Elapsed time: 1.875s, Critical Path: 1.77s
INFO: 2 processes: 2 internal.
FAILED: Build did NOT complete successfully
```

----------------------------------------------------------------------------------------------------------------------
Author: Thomas Wolf
Date: 2022-06-08 08:45:50.000000000
Message: 
Patch Set 1:

(1 comment)
Line:248, org.eclipse.jgit.pgm/src/org/eclipse/jgit/pgm/DiffTool.java -> No, do _not_ use Charset.defaultCharset(). errorprone is wrong here. As of JEP 400 (Java 17), Charset.defaultCharset() is _always_ UTF_8.

Use SystemReader.getInstance().getDefaultCharset() if dealing with input/output to external processes.

As of Java 17 there is also Console.charset(), but that uses system property "sun.stdout.encoding", which doesn't seem to be related to "native.encoding".

----------------------------------------------------------------------------------------------------------------------
Author: David Ostrovsky
Date: 2022-06-08 20:42:47.000000000
MISMATCHED INLINE COMMENT
File Comment: /PATCHSET_LEVEL -> Done
----------------------------------------------------------------------------------------------------------------------
Author: David Ostrovsky
Date: 2022-06-08 20:42:47.000000000
MISMATCHED INLINE COMMENT
Line:248, org.eclipse.jgit.pgm/src/org/eclipse/jgit/pgm/DiffTool.java -> Done
----------------------------------------------------------------------------------------------------------------------
